# ChangeLog for x11-misc/xsensors
# Copyright 2000-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/x11-misc/cvs-repo/gentoo-x86/x11-misc/xsensors/ChangeLog,v 1.19 2007/11/05 04:51:12 omp Exp $

*xsensors-0.60 (05 Nov 2007)

  05 Nov 2007; David Shakaryan <omp@gentoo.org> +xsensors-0.60.ebuild:
  Version bump. (bug #198094)

  03 Feb 2006; Mark Loeser <halcy0n@gentoo.org> xsensors-0.50.ebuild:
  Put back to ~arch; this should not have been bumped straight to stable

*xsensors-0.50 (03 Feb 2006)

  03 Feb 2006; Kristopher Kersey <augustus@gentoo.org>
  +xsensors-0.50.ebuild:
  Added new version 0.50.

  21 Jan 2006; Krzysiek Pawlik <nelchael@gentoo.org> -xsensors-0.20.ebuild,
  -xsensors-0.46.ebuild:
  Removed old versions.

  02 Nov 2005; <augustus@gentoo.org> xsensors-0.47.ebuild:
  Stabilize 0.47 on amd64 ppc x86.

  01 Nov 2005; Krzysiek Pawlik <nelchael@gentoo.org> ChangeLog:
  Fixed ChangeLog.

  24 Aug 2005; Jonathan Smith <smithj@gentoo.org> xsensors-0.46.ebuild,
  xsensors-0.47.ebuild:
  #101918: changed gtk-1 dependency to gtk2

  21 Jun 2005; Jonathan Smith <smithj@gentoo.org> ChangeLog:
  someone forgot to add an entry to the changelog saying that 0.47 was in the
  tree... well, it is...

  17 Jun 2005; David Holm <dholm@gentoo.org> xsensors-0.47.ebuild:
  Added to ~ppc.

*xsensors-0.47 (16 Jun 2005)

  16 Jun 2005; <augustus@gentoo.org> xsensors-0.46.ebuild, Manifest:
  New xsensors release.

  27 Feb 2005; Henrik Brix Andersen <brix@gentoo.org> xsensors-0.46.ebuild:
  Dependency update: sys-apps/lm-sensors -> sys-apps/lm_sensors.

  27 Feb 2005; Henrik Brix Andersen <brix@gentoo.org> xsensors-0.20.ebuild:
  Dependency update: sys-apps/lm-sensors -> sys-apps/lm_sensors.

*xsensors-0.46 (20 Nov 2004)

  20 Nov 2004; <augustus@gentoo.org> +xsensors-0.46.ebuild:
  Latest version of XSensors checked in to portage.

  15 Apr 2004; Danny van Dyk <kugelfang@gentoo.org> xsensors-0.20.ebuild:
  marked ~amd64
