@@ -1,3 +1,0 @@
-MD5 3c80057bf8cc2d2f9803a496e7bc6e78 xsensors-0.50.tar.gz 123323
-RMD160 54cebc04ae0303e262565b158e885bac961324e9 xsensors-0.50.tar.gz 123323
-SHA256 369a92fe828c327a7cb3521ab67b3c4d1bdd1c5fd2c3462002314085a980d49d xsensors-0.50.tar.gz 123323
