@@ -1,6 +1,6 @@
 # Copyright 1999-2005 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /usr/local/ssd/gentoo-x86/output/x11-misc/cvs-repo/gentoo-x86/x11-misc/xsensors/Attic/xsensors-0.47.ebuild,v 1.4 2005/11/02 15:26:02 augustus Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/x11-misc/cvs-repo/gentoo-x86/x11-misc/xsensors/Attic/xsensors-0.47.ebuild,v 1.5 2008/01/07 04:02:46 omp Exp $
 
 DESCRIPTION="A hardware health information viewer, interface to lm-sensors"
 HOMEPAGE="http://www.linuxhardware.org/xsensors"
@@ -10,8 +10,10 @@ SLOT="0"
 KEYWORDS="amd64 ppc x86"
 IUSE=""
 
-DEPEND="=x11-libs/gtk+-2*
+RDEPEND="=x11-libs/gtk+-2*
 	sys-apps/lm_sensors"
+DEPEND="${RDEPEND}
+	dev-util/pkgconfig"
 
 src_install() {
 	einstall || die
