@@ -1,19 +1,0 @@
-# Copyright 1999-2006 Gentoo Foundation
-# Distributed under the terms of the GNU General Public License v2
-# $Header: /usr/local/ssd/gentoo-x86/output/x11-misc/cvs-repo/gentoo-x86/x11-misc/xsensors/Attic/xsensors-0.50.ebuild,v 1.2 2006/02/03 19:13:25 halcy0n Exp $
-
-DESCRIPTION="A hardware health information viewer, interface to lm-sensors."
-HOMEPAGE="http://www.linuxhardware.org/xsensors"
-SRC_URI="http://www.linuxhardware.org/xsensors/${P}.tar.gz"
-LICENSE="GPL-2"
-SLOT="0"
-KEYWORDS="~amd64 ~ppc ~x86"
-IUSE=""
-
-DEPEND="=x11-libs/gtk+-2*
-	sys-apps/lm_sensors"
-
-src_install() {
-	einstall || die
-	dodoc README ChangeLog AUTHORS TODO
-}
