@@ -1,6 +1,9 @@
 # ChangeLog for x11-misc/xsensors
-# Copyright 2000-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/x11-misc/cvs-repo/gentoo-x86/x11-misc/xsensors/ChangeLog,v 1.19 2007/11/05 04:51:12 omp Exp $
+# Copyright 2000-2008 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /usr/local/ssd/gentoo-x86/output/x11-misc/cvs-repo/gentoo-x86/x11-misc/xsensors/ChangeLog,v 1.20 2008/01/07 04:00:32 omp Exp $
+
+  07 Jan 2008; David Shakaryan <omp@gentoo.org> -xsensors-0.50.ebuild:
+  Remove older version.
 
 *xsensors-0.60 (05 Nov 2007)
 
